--- a/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>23/03/11 10:10:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>23/03/11 10:13:03</td>   <td>159300</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>23/03/11 10:10:29</td>   <td>4975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.login()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">login</td> 
-  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>23/03/11 10:10:34</td>   <td>10289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@c88a337]">ordersEntry</td> 
-  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/07/18 15:40:26</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@25641d39]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@216856121</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/07/18 15:48:25</td>   <td>479556</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@25641d39]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@216856121</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/07/18 15:40:33</td>   <td>6821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.login()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@25641d39]">login</td> 
+  <td>main@216856121</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/07/18 15:40:38</td>   <td>12185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@25641d39]">ordersEntry</td> 
+  <td>main@216856121</td>   <td></td> </tr>
 </table>
